# modulus-sym

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  Windows.Dockerfile  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request.yml  feature_request.yml
.github/workflows/: blossom-ci.yaml  blossom-ci.yml
.gitlab/merge_request_templates/: Default.md
accompanying_licences/: all_licenses.txt  explanation.txt  oss_licenses.txt
dockerfiles/: Dockerfile  README.md
docs/: Makefile  conf.py  index.rst
docs/api/: api_index.rst  modulus.sym.domain.constraint.rst  modulus.sym.domain.inferencer.rst  modulus.sym.domain.monitor.rst  modulus.sym.domain.validator.rst  modulus.sym.eq.rst  modulus.sym.geometry.rst  modulus.sym.hydra.rst  modulus.sym.loss.rst  modulus.sym.models.rst  modulus.sym.rst  modulus.sym.utils.rst
docs/test/: build_html.py  modulus_dictionary.json  overwatch.py  test_html.py  test_spelling.py
examples/: README.md  Readme.md
examples/airfoil_pinn/: README.md  requirements.txt
examples/aneurysm/: README.md  Readme.md  aneurysm.py
examples/anti_derivative/: data_informed.py  physics_informed.py
examples/bracket/: bracket.py
examples/chip_2d/: chip_2d.py  chip_2d_solid_fluid_heat_transfer_flow.py  chip_2d_solid_fluid_heat_transfer_heat.py  chip_2d_solid_solid_heat_transfer.py
examples/cylinder/: cylinder_2d.py
examples/cylinder_dynamic/: cylinder_2d_time.py
examples/darcy/: darcy_AFNO.py  darcy_AFNO_MP.py  darcy_DeepO.py  darcy_FNO.py  darcy_FNO_lazy.py  darcy_PINO.py  ops.py  utilities.py
examples/eigenvalue/: box_1d.py  box_ode.py  custom.py
examples/fourcastnet/: fcn_era5.py  inferencer.py
examples/fuselage_panel/: panel.py
examples/geometry/: csg_example.py  naca_airfoil.py  parameterized_example.py  parameterized_tesselated_example.py  speed_test.py  tessellated_example.py
examples/helmholtz/: helmholtz.py  helmholtz_hardBC.py  helmholtz_ntk.py
examples/ldc/: ldc_2d.py  ldc_2d_domain_decomposition.py  ldc_2d_domain_decomposition_fbpinn.py  ldc_2d_importance_sampling.py  ldc_2d_xpinn.py  ldc_2d_zeroEq.py
examples/ode_spring_mass/: plot_results_spring.py  spring_mass_ode.py  spring_mass_solver.py
examples/plane_displacement/: plane_displacement.py
examples/reservoir_simulation/: README.md
examples/seismic_wave/: README.md  Readme.md  wave_2d.py
examples/sphere_high_speed/: sphere_high_speed.py
examples/super_resolution/: inference_utils.py  jhtdb_utils.py  ops.py  super_resolution.py
examples/taylor_green/: plot_results.py  taylor_green.py  taylor_green_causal.py
examples/test/: README.md  experiments.json  process.py  que.py  run_ci_tests.py  run_experiments.py  tflogs_reader.py
examples/three_fin_2d/: heat_sink.py  heat_sink_inverse.py
examples/three_fin_3d/: README.md  Readme.md  design_optimization.sh  three_fin_design.py  three_fin_flow.py  three_fin_geometry.py  three_fin_thermal.py
examples/wave_equation/: wave_1d.py  wave_1d_causal.py  wave_equation.py  wave_inverse.py
examples/waveguide/: EM_Utilities.py
modulus/sym/: __init__.py  amp.py  constants.py  graph.py  (+4 more)
test/: coverage.pytest.rc  run_tests.py  test_amp.py  test_derivatives.py  test_geometry.py  test_geometry_dataloader.py  test_graph.py  test_interpolation.py  test_loss.py  test_meshless_finite_dirv.py  test_phy_informer.py  test_spatial_grads.py  test_spectral_convs.py  test_sympy_node.py  test_sympy_printer.py  test_tesselated_geometry.py
(+575 files in other folders)
