[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-modulus.sym"
authors = [
  { name="NVIDIA Modulus Team"},
]
description = "A deep learning framework for AI-driven multi-physics systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}
dependencies = [
    "Cython>=0.29,<0.30",
    "chaospy>=4.3.7",
    "h5py>=3.7.0",
    "hydra-core>=1.2.0",
    "mistune>=2.0,<2.1",
    "ninja",
    "notebook>=7.2.2",
    "numpy-stl>=2.16,<2.17",
    "nvidia-modulus>=0.2.0",
    "opencv-python>=4.8.1.78",
    "pillow>=10.2,<10.3",
    "pint>=0.19.2",
    "scikit-learn>=1.2.0",
    "symengine>=0.10.0",
    "sympy>=1.12",
    "tensorboard>=2.8.0",
    "termcolor>=2.1.1",
    "timm>=1.0.3",
    "torch-optimizer==0.3.0",
    "transforms3d==0.3.1",
    "typing>=3.7,<3.8",
    "vtk>=9.2.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "modulus.sym.__version__"}

[tool.setuptools.packages.find]
include = ["modulus.*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
